--- a/public/css/tooltips.css
+++ b/public/css/tooltips.css
@@ -19,6 +19,10 @@
     z-index: 100;
 }
 
+.tooltip.tooltip--down:after {
+    bottom: -2em;
+}
+
 .tooltip:hover:after {
     font-size: 20px;
     border: 4px solid var(--foreground-color--opaque);
@@ -215,8 +219,23 @@
 .tooltip.wi-humidity:after {
     content: "Luftfeuchte";
 }
-.tooltip.tooltip-dewPoint:after {
+.tooltip.wi-raindrops:after {
     content: "Taupunkt";
+}
+.tooltip.wi-thermometer:after {
+    content: "Temperatur";
+}
+.tooltip.wi-umbrella:after {
+    content: "Niederschlag";
+}
+.tooltip.wi-snowflake-cold:after {
+    content: "Schneefall";
+}
+.tooltip.wi-windy:after {
+    content: "Mittelwind";
+}
+.tooltip.wi-strong-wind:after {
+    content: "Windspitzen";
 }
 
 /* moon phases */
